Fixed `EuiComboBox` disabled pills and text contrast

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -107,7 +107,19 @@
 
   &.euiComboBox-isDisabled {
     .euiComboBox__inputWrap {
+      // sass-lint:disable-block no-vendor-prefixes
       @include euiFormControlDisabledStyle;
+      -webkit-text-fill-color: unset; // overrides $euiFormControlDisabledColor because the color doesn't work with multiple background colors 
+    }
+
+    .euiComboBoxPill:not(.euiComboBoxPill--plainText) {
+      opacity: .25;
+    }
+
+    .euiComboBoxPill--plainText {
+      // sass-lint:disable-block no-vendor-prefixes
+      color: $euiFormControlDisabledColor;
+      -webkit-text-fill-color: $euiFormControlDisabledColor; // Required for Safari
     }
   }
 
